<resources>
    <string name="app_name">Easy Park</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome_to_easypark">Welcome to EasyPark</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="hours">
        <item>09:00 - 10:00</item>
        <item>10:00 - 11:00</item>
        <item>11:00 - 12:00</item>
        <item>12:00 - 13:00</item>
        <item>13:00 - 14:00</item>
        <item>14:00 - 15:00</item>
        <item>15:00 - 16:00</item>
        <item>16:00 - 17:00</item>
        <item>17:00 - 18:00</item>
        <item>18:00 - 19:00</item>
        <item>19:00 - 20:00</item>
        <item>20:00 - 21:00</item>

    </string-array>
</resources>