<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/backgroundpark">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="welcome back"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log in to make a reservation"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@color/textWhite"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="141dp"
        android:layout_height="144dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        app:srcCompat="@drawable/logotext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="vertical"
        android:layout_below="@id/logo2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/email_background_ok">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_baseline_account_circle_24" />

            <EditText
                android:id="@+id/lemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#00000000"
                android:ems="10"
                android:hint="@string/e_mail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:orientation="horizontal"
            android:background="@drawable/password_background_ok">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_baseline_key_24" />

            <EditText
                android:id="@+id/lpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#00000000"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:text="@string/log_in"
            android:textColor="@color/textWhite"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>